# pdf-craft-next

./: README.md  README_zh-CN.md  VLLM_INTEGRATION.md  package.oo.yaml  pyproject.toml
flows/test-gpu-optimization/: .flow.ui.oo.json  flow.oo.yaml
flows/test-pdf-conversion/: .flow.ui.oo.json  flow.oo.yaml
libs/doc_page_extractor/: extractor.py  model_vllm.py
libs/pdf_craft/: transform.py
libs/pdf_craft/pdf/: extractor.py  ocr.py
oo-locales/: en.json  zh-CN.json
tasks/pdf-to-epub/: __init__.py  task.oo.yaml
tasks/pdf-to-markdown/: __init__.py  task.oo.yaml
