[project]
name = "pdf-craft-next"
version = "0.1.0"
description = ""
authors = [
    {name = "alwaymavs",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pdf-craft (>=1.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "pdf_craft_next", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
